B&L QA/objects/Inventory__c.object
<CustomObject>
    <description>NORDCSS: Stores the inventory for product items in Salesforce.</description>
    <fields>
        <fullName>Name_ShipFrom__c</fullName>
        <description>Unique External ID - concatenation of SKU and Ship From Location. Populated by CI.</description>
        <externalId>true</externalId>
        <label>Name - ShipFrom</label>
        <length>27</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PS_Product_SKU__c</fullName>
        <description>This is the product SKU as stored in Peoplesoft.</description>
        <label>PS Product SKU</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_ID__c</fullName>
        <description>INDSU field to collect Reference field to map in salesforce.com</description>
        <label>Product Group ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>INDSU field to collect Product family details related to Product Group ID</description>
        <label>Product Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_In_Stock__c</fullName>
        <label>Quantity In Stock</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Date__c</fullName>
        <description>INDSU field to collect the date on which the record is pulled from Oracle ERP</description>
        <label>Record Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SKU_ID__c</fullName>
        <description>INDSU field to collect Unique id maintained for the product</description>
        <label>SKU ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_From__c</fullName>
        <label>Ship From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EURLC</fullName>
                    <default>true</default>
                    <label>EURLC</label>
                </value>
                <value>
                    <fullName>NORDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Point_Name_SKU_ID__c</fullName>
        <description>INDSU field to capture the SKU Id and the stock point name, the unique id for the product</description>
        <externalId>true</externalId>
        <label>Stock Point Name-SKU ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Point__c</fullName>
        <description>INDSU field to collect IDC Stock details</description>
        <label>Stock Point</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Inventory Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_SKU__c</columns>
        <columns>Quantity_In_Stock__c</columns>
        <columns>Ship_From__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product SKU</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <recordTypes>
        <fullName>APACSU_Inventory_Item_Record_Type</fullName>
        <active>true</active>
        <description>APACSU record type used to display IDC stock details from BPCS ERP</description>
        <label>APACSU Inventory Item Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>INDSU_Inventory_Item_Record_Type</fullName>
        <active>true</active>
        <description>INDSU record type used to display IDC stock details from Oracle ERP</description>
        <label>INDSU Inventory Item Record Type</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>